# LatinSquareCompletion

./: .clang-format  .gitignore  CMakeLists.txt  README.md
docs/: 约简对比.xlsx
include/latin_square/: ColorDomain.h  Instance.h  LatinSquare.h  color_domain.h  domain.h  evaluator.h  instance.h  latin_square.h  local_search.h  move.h  vec_set.h
include/utils/: RandomGenerator.h  ThreadPool.h
src/: main.cpp
src/latin_square/: ColorDomain.cpp  Instance.cpp  color_domain.cpp  evaluator.cpp  instance.cpp  local_search.cpp
